Oops... forgot to commit project file

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -492,13 +492,11 @@
     <Content Include="Content\editors\ckeditor\plugins\a11yhelp\dialogs\a11yhelp.js" />
     <Content Include="Content\editors\ckeditor\plugins\a11yhelp\dialogs\lang\de.js" />
     <Content Include="Content\editors\ckeditor\plugins\a11yhelp\dialogs\lang\en.js" />
+    <Content Include="Content\editors\ckeditor\plugins\about\dialogs\about.js" />
+    <Content Include="Content\editors\ckeditor\plugins\about\dialogs\hidpi\logo_ckeditor.png" />
+    <Content Include="Content\editors\ckeditor\plugins\about\dialogs\logo_ckeditor.png" />
     <Content Include="Content\editors\ckeditor\plugins\clipboard\dialogs\paste.js" />
     <Content Include="Content\editors\ckeditor\plugins\codemirror\css\codemirror.min.css" />
-    <Content Include="Content\editors\ckeditor\plugins\codemirror\icons\autocomplete.png" />
-    <Content Include="Content\editors\ckeditor\plugins\codemirror\icons\autoformat.png" />
-    <Content Include="Content\editors\ckeditor\plugins\codemirror\icons\commentselectedrange.png" />
-    <Content Include="Content\editors\ckeditor\plugins\codemirror\icons\searchcode.png" />
-    <Content Include="Content\editors\ckeditor\plugins\codemirror\icons\uncommentselectedrange.png" />
     <Content Include="Content\editors\ckeditor\plugins\codemirror\js\beautify.min.js" />
     <Content Include="Content\editors\ckeditor\plugins\codemirror\js\codemirror.addons.min.js" />
     <Content Include="Content\editors\ckeditor\plugins\codemirror\js\codemirror.addons.search.min.js" />
@@ -508,9 +506,6 @@
     <Content Include="Content\editors\ckeditor\plugins\codemirror\js\codemirror.mode.htmlmixed.min.js" />
     <Content Include="Content\editors\ckeditor\plugins\codemirror\js\codemirror.mode.javascript.min.js" />
     <Content Include="Content\editors\ckeditor\plugins\codemirror\js\codemirror.mode.php.min.js" />
-    <Content Include="Content\editors\ckeditor\plugins\codemirror\lang\de.js" />
-    <Content Include="Content\editors\ckeditor\plugins\codemirror\lang\en.js" />
-    <Content Include="Content\editors\ckeditor\plugins\codemirror\plugin.js" />
     <Content Include="Content\editors\ckeditor\plugins\codemirror\theme\3024-day.css" />
     <Content Include="Content\editors\ckeditor\plugins\codemirror\theme\3024-night.css" />
     <Content Include="Content\editors\ckeditor\plugins\codemirror\theme\ambiance-mobile.css" />
@@ -541,78 +536,29 @@
     <Content Include="Content\editors\ckeditor\plugins\codemirror\theme\vibrant-ink.css" />
     <Content Include="Content\editors\ckeditor\plugins\codemirror\theme\xq-dark.css" />
     <Content Include="Content\editors\ckeditor\plugins\codemirror\theme\xq-light.css" />
-    <Content Include="Content\editors\ckeditor\plugins\colorbutton\icons\bgcolor.png" />
-    <Content Include="Content\editors\ckeditor\plugins\colorbutton\icons\hidpi\bgcolor.png" />
-    <Content Include="Content\editors\ckeditor\plugins\colorbutton\icons\hidpi\textcolor.png" />
-    <Content Include="Content\editors\ckeditor\plugins\colorbutton\icons\textcolor.png" />
-    <Content Include="Content\editors\ckeditor\plugins\colorbutton\lang\de.js" />
-    <Content Include="Content\editors\ckeditor\plugins\colorbutton\lang\en.js" />
-    <Content Include="Content\editors\ckeditor\plugins\colorbutton\plugin.js" />
     <Content Include="Content\editors\ckeditor\plugins\colordialog\dialogs\colordialog.js" />
-    <Content Include="Content\editors\ckeditor\plugins\colordialog\lang\de.js" />
-    <Content Include="Content\editors\ckeditor\plugins\colordialog\lang\en.js" />
-    <Content Include="Content\editors\ckeditor\plugins\colordialog\plugin.js" />
-    <Content Include="Content\editors\ckeditor\plugins\dialogadvtab\plugin.js" />
     <Content Include="Content\editors\ckeditor\plugins\dialog\dialogDefinition.js" />
-    <Content Include="Content\editors\ckeditor\plugins\divarea\plugin.js" />
     <Content Include="Content\editors\ckeditor\plugins\find\dialogs\find.js" />
-    <Content Include="Content\editors\ckeditor\plugins\find\icons\find-rtl.png" />
-    <Content Include="Content\editors\ckeditor\plugins\find\icons\find.png" />
-    <Content Include="Content\editors\ckeditor\plugins\find\icons\hidpi\find-rtl.png" />
-    <Content Include="Content\editors\ckeditor\plugins\find\icons\hidpi\find.png" />
-    <Content Include="Content\editors\ckeditor\plugins\find\icons\hidpi\replace.png" />
-    <Content Include="Content\editors\ckeditor\plugins\find\icons\replace.png" />
-    <Content Include="Content\editors\ckeditor\plugins\find\lang\de.js" />
-    <Content Include="Content\editors\ckeditor\plugins\find\lang\en.js" />
-    <Content Include="Content\editors\ckeditor\plugins\find\plugin.js" />
     <Content Include="Content\editors\ckeditor\plugins\fontawesome\dialogs\fontawesome.js" />
     <Content Include="Content\editors\ckeditor\plugins\fontawesome\font-awesome\css\font-awesome.min.css" />
     <Content Include="Content\editors\ckeditor\plugins\fontawesome\font-awesome\fonts\fontawesome-webfont.svg" />
-    <Content Include="Content\editors\ckeditor\plugins\fontawesome\icons\fontawesome.png" />
-    <Content Include="Content\editors\ckeditor\plugins\fontawesome\plugin.js" />
-    <Content Include="Content\editors\ckeditor\plugins\font\lang\de.js" />
-    <Content Include="Content\editors\ckeditor\plugins\font\lang\en.js" />
-    <Content Include="Content\editors\ckeditor\plugins\font\plugin.js" />
+    <Content Include="Content\editors\ckeditor\plugins\fontawesome\installation.txt" />
+    <Content Include="Content\editors\ckeditor\plugins\fontawesome\logs.txt" />
     <Content Include="Content\editors\ckeditor\plugins\icons.png" />
     <Content Include="Content\editors\ckeditor\plugins\icons_hidpi.png" />
     <Content Include="Content\editors\ckeditor\plugins\image\dialogs\image.js" />
     <Content Include="Content\editors\ckeditor\plugins\image\images\noimage.png" />
-    <Content Include="Content\editors\ckeditor\plugins\jfk_sprite115.png" />
-    <Content Include="Content\editors\ckeditor\plugins\justify\icons\hidpi\justifyblock.png" />
-    <Content Include="Content\editors\ckeditor\plugins\justify\icons\hidpi\justifycenter.png" />
-    <Content Include="Content\editors\ckeditor\plugins\justify\icons\hidpi\justifyleft.png" />
-    <Content Include="Content\editors\ckeditor\plugins\justify\icons\hidpi\justifyright.png" />
-    <Content Include="Content\editors\ckeditor\plugins\justify\icons\justifyblock.png" />
-    <Content Include="Content\editors\ckeditor\plugins\justify\icons\justifycenter.png" />
-    <Content Include="Content\editors\ckeditor\plugins\justify\icons\justifyleft.png" />
-    <Content Include="Content\editors\ckeditor\plugins\justify\icons\justifyright.png" />
-    <Content Include="Content\editors\ckeditor\plugins\justify\lang\de.js" />
-    <Content Include="Content\editors\ckeditor\plugins\justify\lang\en.js" />
-    <Content Include="Content\editors\ckeditor\plugins\justify\plugin.js" />
-    <Content Include="Content\editors\ckeditor\plugins\lineutils\plugin.js" />
     <Content Include="Content\editors\ckeditor\plugins\link\dialogs\anchor.js" />
     <Content Include="Content\editors\ckeditor\plugins\link\dialogs\link.js" />
     <Content Include="Content\editors\ckeditor\plugins\link\images\anchor.png" />
     <Content Include="Content\editors\ckeditor\plugins\link\images\hidpi\anchor.png" />
+    <Content Include="Content\editors\ckeditor\plugins\magicline\images\hidpi\icon-rtl.png" />
     <Content Include="Content\editors\ckeditor\plugins\magicline\images\hidpi\icon.png" />
+    <Content Include="Content\editors\ckeditor\plugins\magicline\images\icon-rtl.png" />
     <Content Include="Content\editors\ckeditor\plugins\magicline\images\icon.png" />
-    <Content Include="Content\editors\ckeditor\plugins\panelbutton\plugin.js" />
     <Content Include="Content\editors\ckeditor\plugins\pastefromword\filter\default.js" />
-    <Content Include="Content\editors\ckeditor\plugins\placeholder\dialogs\placeholder.js" />
-    <Content Include="Content\editors\ckeditor\plugins\placeholder\icons\hidpi\placeholder.png" />
-    <Content Include="Content\editors\ckeditor\plugins\placeholder\icons\placeholder.png" />
-    <Content Include="Content\editors\ckeditor\plugins\placeholder\lang\de.js" />
-    <Content Include="Content\editors\ckeditor\plugins\placeholder\lang\en.js" />
-    <Content Include="Content\editors\ckeditor\plugins\placeholder\plugin.js" />
-    <Content Include="Content\editors\ckeditor\plugins\quicktable\lang\de.js" />
-    <Content Include="Content\editors\ckeditor\plugins\quicktable\lang\en.js" />
-    <Content Include="Content\editors\ckeditor\plugins\quicktable\plugin.js" />
     <Content Include="Content\editors\ckeditor\plugins\scayt\dialogs\options.js" />
     <Content Include="Content\editors\ckeditor\plugins\scayt\dialogs\toolbar.css" />
-    <Content Include="Content\editors\ckeditor\plugins\showblocks\icons\hidpi\showblocks-rtl.png" />
-    <Content Include="Content\editors\ckeditor\plugins\showblocks\icons\hidpi\showblocks.png" />
-    <Content Include="Content\editors\ckeditor\plugins\showblocks\icons\showblocks-rtl.png" />
-    <Content Include="Content\editors\ckeditor\plugins\showblocks\icons\showblocks.png" />
     <Content Include="Content\editors\ckeditor\plugins\showblocks\images\block_address.png" />
     <Content Include="Content\editors\ckeditor\plugins\showblocks\images\block_blockquote.png" />
     <Content Include="Content\editors\ckeditor\plugins\showblocks\images\block_div.png" />
@@ -624,42 +570,18 @@
     <Content Include="Content\editors\ckeditor\plugins\showblocks\images\block_h6.png" />
     <Content Include="Content\editors\ckeditor\plugins\showblocks\images\block_p.png" />
     <Content Include="Content\editors\ckeditor\plugins\showblocks\images\block_pre.png" />
-    <Content Include="Content\editors\ckeditor\plugins\showblocks\lang\de.js" />
-    <Content Include="Content\editors\ckeditor\plugins\showblocks\lang\en.js" />
-    <Content Include="Content\editors\ckeditor\plugins\showblocks\plugin.js" />
     <Content Include="Content\editors\ckeditor\plugins\specialchar\dialogs\lang\de.js" />
     <Content Include="Content\editors\ckeditor\plugins\specialchar\dialogs\lang\en.js" />
     <Content Include="Content\editors\ckeditor\plugins\specialchar\dialogs\specialchar.js" />
-    <Content Include="Content\editors\ckeditor\plugins\tableresize\plugin.js" />
     <Content Include="Content\editors\ckeditor\plugins\tabletools\dialogs\tableCell.js" />
     <Content Include="Content\editors\ckeditor\plugins\table\dialogs\table.js" />
-    <Content Include="Content\editors\ckeditor\plugins\templates\dialogs\templates.css" />
-    <Content Include="Content\editors\ckeditor\plugins\templates\dialogs\templates.js" />
-    <Content Include="Content\editors\ckeditor\plugins\templates\icons\hidpi\templates-rtl.png" />
-    <Content Include="Content\editors\ckeditor\plugins\templates\icons\hidpi\templates.png" />
-    <Content Include="Content\editors\ckeditor\plugins\templates\icons\templates-rtl.png" />
-    <Content Include="Content\editors\ckeditor\plugins\templates\icons\templates.png" />
-    <Content Include="Content\editors\ckeditor\plugins\templates\lang\de.js" />
-    <Content Include="Content\editors\ckeditor\plugins\templates\lang\en.js" />
-    <Content Include="Content\editors\ckeditor\plugins\templates\plugin.js" />
-    <Content Include="Content\editors\ckeditor\plugins\templates\templates\default.js" />
-    <Content Include="Content\editors\ckeditor\plugins\templates\templates\images\template1.gif" />
-    <Content Include="Content\editors\ckeditor\plugins\templates\templates\images\template2.gif" />
-    <Content Include="Content\editors\ckeditor\plugins\templates\templates\images\template3.gif" />
     <Content Include="Content\editors\ckeditor\plugins\widget\images\handle.png" />
-    <Content Include="Content\editors\ckeditor\plugins\widget\lang\de.js" />
-    <Content Include="Content\editors\ckeditor\plugins\widget\lang\en.js" />
-    <Content Include="Content\editors\ckeditor\plugins\widget\plugin.js" />
     <Content Include="Content\editors\ckeditor\plugins\wsc\dialogs\ciframe.html" />
     <Content Include="Content\editors\ckeditor\plugins\wsc\dialogs\tmpFrameset.html" />
     <Content Include="Content\editors\ckeditor\plugins\wsc\dialogs\wsc.css" />
     <Content Include="Content\editors\ckeditor\plugins\wsc\dialogs\wsc.js" />
     <Content Include="Content\editors\ckeditor\plugins\wsc\dialogs\wsc_ie.js" />
     <Content Include="Content\editors\ckeditor\plugins\youtube\images\icon.png" />
-    <Content Include="Content\editors\ckeditor\plugins\youtube\lang\de.js" />
-    <Content Include="Content\editors\ckeditor\plugins\youtube\lang\en.js" />
-    <Content Include="Content\editors\ckeditor\plugins\youtube\plugin.js" />
-    <Content Include="Content\editors\ckeditor\plugins\zoom\plugin.js" />
     <Content Include="Content\editors\ckeditor\skins\moono\dialog.css" />
     <Content Include="Content\editors\ckeditor\skins\moono\dialog_ie.css" />
     <Content Include="Content\editors\ckeditor\skins\moono\dialog_ie7.css" />
@@ -671,6 +593,8 @@
     <Content Include="Content\editors\ckeditor\skins\moono\editor_ie7.css" />
     <Content Include="Content\editors\ckeditor\skins\moono\editor_ie8.css" />
     <Content Include="Content\editors\ckeditor\skins\moono\editor_iequirks.css" />
+    <Content Include="Content\editors\ckeditor\skins\moono\icons.png" />
+    <Content Include="Content\editors\ckeditor\skins\moono\icons_hidpi.png" />
     <Content Include="Content\editors\ckeditor\skins\moono\images\arrow.png" />
     <Content Include="Content\editors\ckeditor\skins\moono\images\close.png" />
     <Content Include="Content\editors\ckeditor\skins\moono\images\hidpi\close.png" />
@@ -680,9 +604,33 @@
     <Content Include="Content\editors\ckeditor\skins\moono\images\lock-open.png" />
     <Content Include="Content\editors\ckeditor\skins\moono\images\lock.png" />
     <Content Include="Content\editors\ckeditor\skins\moono\images\refresh.png" />
-    <Content Include="Content\editors\ckeditor\skins\moono\skin.js" />
     <Content Include="Content\editors\ckeditor\skins\smartstore\dialog.css" />
     <Content Include="Content\editors\ckeditor\skins\smartstore\editor.css" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons.css" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\bgcolor.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\codemirror\autocomplete.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\codemirror\autoformat.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\codemirror\commentselectedrange.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\codemirror\searchcode.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\codemirror\uncommentselectedrange.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\find-rtl.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\find.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\fontawesome.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\jfk_sprite115.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\justifyblock.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\justifycenter.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\justifyleft.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\justifyright.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\placeholder.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\replace.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\showblocks-rtl.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\showblocks.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\sprite.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\sprite_hidpi.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\templates-rtl.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\templates.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\textcolor.png" />
+    <Content Include="Content\editors\ckeditor\skins\smartstore\icons\youtube.png" />
     <Content Include="Content\editors\ckeditor\skins\smartstore\images\arrow.png" />
     <Content Include="Content\editors\ckeditor\skins\smartstore\images\close.png" />
     <Content Include="Content\editors\ckeditor\skins\smartstore\images\hidpi\close.png" />
@@ -973,6 +921,14 @@
     <Content Include="Content\fonts\fontawesome-webfont.woff" />
     <Content Include="Content\fonts\FontAwesome.otf" />
     <Content Include="Content\bootstrap\custom\datetimepicker.less" />
+    <Content Include="Content\filemanager\asp_net\main.ashx" />
+    <Content Include="Content\filemanager\conf.json" />
+    <Content Include="Content\filemanager\js\fileman-modified.zip" />
+    <Content Include="Content\filemanager\lang\bg.json" />
+    <Content Include="Content\filemanager\lang\de.json" />
+    <Content Include="Content\filemanager\lang\en.json" />
+    <Content Include="Content\filemanager\lang\fr.json" />
+    <Content Include="Content\editors\ckeditor\LICENSE.md" />
     <Content Include="Content\editors\ckeditor\plugins\codemirror\js\codemirror.min.js.map" />
     <Content Include="Content\editors\ckeditor\plugins\fontawesome\font-awesome\fonts\fontawesome-webfont.eot" />
     <Content Include="Content\editors\ckeditor\plugins\fontawesome\font-awesome\fonts\fontawesome-webfont.ttf" />
@@ -982,15 +938,7 @@
     <Content Include="Content\editors\ckeditor\plugins\scayt\README.md" />
     <Content Include="Content\editors\ckeditor\plugins\wsc\LICENSE.md" />
     <Content Include="Content\editors\ckeditor\plugins\wsc\README.md" />
-    <Content Include="Content\editors\ckeditor\README.md" />
     <Content Include="Content\editors\ckeditor\skins\moono\readme.md" />
-    <Content Include="Content\filemanager\asp_net\main.ashx" />
-    <Content Include="Content\filemanager\conf.json" />
-    <Content Include="Content\filemanager\js\fileman-modified.zip" />
-    <Content Include="Content\filemanager\lang\bg.json" />
-    <Content Include="Content\filemanager\lang\de.json" />
-    <Content Include="Content\filemanager\lang\en.json" />
-    <Content Include="Content\filemanager\lang\fr.json" />
     <None Include="Content\fonts\raw\fonts\Fontastic.svg" />
     <None Include="Content\fonts\raw\index.html" />
     <None Include="Content\fonts\raw\license.txt" />
