--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -77,7 +77,7 @@
     <!-- add custom Area paths separated with comma (e.g.: "~/Plugins/, ~/Areas/") -->
     <add key="sm:AreaBasePaths" value="~/Plugins/" />
     <!-- set this to "true", if the view engine should also try to resolve view files ending with {CurrentLanguage} (e.g.: MyView.de.cshtml > MyView.cshtml)  -->
-    <add key="sm:EnableLocalizedViews" value="false" />
+    <add key="sm:EnableLocalizedViews" value="true" />
     <add key="sm:ShowCustomErrors" value="true" />
     <add key="sm:ClearPluginsShadowDirectoryOnStartup" value="false" />
     <add key="sm:TempDirectory" value="~/App_Data/_temp" />
