--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -77,7 +77,7 @@
     <!-- add custom Area paths separated with comma (e.g.: "~/Plugins/, ~/Areas/") -->
     <add key="sm:AreaBasePaths" value="~/Plugins/" />
     <!-- set this to "true", if the view engine should also try to resolve view files ending with {CurrentLanguage} (e.g.: MyView.de.cshtml > MyView.cshtml)  -->
-    <add key="sm:EnableLocalizedViews" value="true" />
+    <add key="sm:EnableLocalizedViews" value="false" />
     <add key="sm:ShowCustomErrors" value="true" />
     <add key="sm:ClearPluginsShadowDirectoryOnStartup" value="false" />
     <add key="sm:TempDirectory" value="~/App_Data/_temp" />
@@ -148,6 +148,8 @@
       <!-- favicon.[ico|png] -->
       <add name="favicon-ico" path="favicon*.ico" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" />
       <add name="favicon-png" path="favicon*.png" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" />
+      <!-- FileNotFound.htm -->
+      <add name="FileNotFound-htm" path="FileNotFound.htm" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" /> 
       <!-- Return 404 for all requests via a managed handler. The URL routing handler will substitute the MVC request handler when routes match. -->
       <add name="NotFound" path="*" verb="*" type="System.Web.HttpNotFoundHandler" preCondition="integratedMode" requireAccess="Script" />
       <!-- WebApi -->
