Minor theme optimization

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
@@ -80,16 +80,13 @@
     
     <!-- Footer -->
     <Var name="FooterBackground" type="Color">#555</Var>
-    <Var name="FooterHeading" type="Color">#7c7c7c</Var>
-    <Var name="FooterFontColor" type="Color">#7c7c7c</Var>
+    <Var name="FooterHeading" type="Color">#888</Var>
+    <Var name="FooterFontColor" type="Color">#888</Var>
     <Var name="FooterLinkColor" type="Color">#aaa</Var>
     <Var name="FooterRadius" type="String">0 0 0 0</Var>
 
     <!-- Container -->
-    
-    
     <Var name="ContainerRadius" type="String">3px</Var>
-    
     <Var name="ContainerHeaderBackground" type="Color">#e1e9f0</Var>
     <Var name="ContainerHeaderFontColor" type="Color">#555</Var>
     <Var name="ContainerHeaderHeight" type="String">17px</Var>
