Registered StaticFileHandler for *.html files

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -148,8 +148,8 @@
       <!-- favicon.[ico|png] -->
       <add name="favicon-ico" path="favicon*.ico" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" />
       <add name="favicon-png" path="favicon*.png" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" />
-      <!-- FileNotFound.htm -->
-      <add name="FileNotFound-htm" path="FileNotFound.htm" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" /> 
+      <!-- *.html -->
+      <add name="html-files" path="*.html" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" /> 
       <!-- Return 404 for all requests via a managed handler. The URL routing handler will substitute the MVC request handler when routes match. -->
       <add name="NotFound" path="*" verb="*" type="System.Web.HttpNotFoundHandler" preCondition="integratedMode" requireAccess="Script" />
       <!-- WebApi -->
