Minor web.config edit

--- a/src/Presentation/SmartStore.Web/Web.Release.config
+++ b/src/Presentation/SmartStore.Web/Web.Release.config
@@ -10,6 +10,7 @@
   </bundleTransformer>
   <appSettings>
     <add key="sm:MonitorThemesFolder" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="sm:EnableLocalizedViews" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
   <system.web>
 	  <compilation xdt:Transform="RemoveAttributes(debug)" />
