--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -134,10 +134,7 @@
     <!-- Prevent IIS 7.0 from returning a custom 404/500 error page of its own. -->
     <httpErrors existingResponse="PassThrough" />
     
-    <modules runAllManagedModulesForAllRequests="false">
-      
-      
-    </modules>
+    <modules runAllManagedModulesForAllRequests="false"></modules>
     <handlers accessPolicy="Script,Read">
       <!-- Clear all handlers, prevents executing code file extensions or returning any file contents. -->
       <clear />
@@ -149,7 +146,8 @@
       <add name="favicon-ico" path="favicon*.ico" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" />
       <add name="favicon-png" path="favicon*.png" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" />
       <!-- *.html -->
-      <add name="html-files" path="*.html" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" /> 
+      <add name="htm-files" path="*.htm" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" />
+      <add name="html-files" path="*.html" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" />
       <!-- Return 404 for all requests via a managed handler. The URL routing handler will substitute the MVC request handler when routes match. -->
       <add name="NotFound" path="*" verb="*" type="System.Web.HttpNotFoundHandler" preCondition="integratedMode" requireAccess="Script" />
       <!-- WebApi -->
@@ -181,6 +179,10 @@
         </hiddenSegments>
       </requestFiltering>
     </security>
+    <rewrite>
+        <rewriteMaps configSource="Config\RewriteMaps.config" />
+        <rules configSource="Config\RewriteRules.config" />
+    </rewrite>
   </system.webServer>
   
   <system.serviceModel>
