Added new settings 'Canonical host name rule'. Enforces permanent redirection to a single domain name for a better page rank (e.g. myshop.com > www.myshop.com or vice versa)

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -203,6 +203,10 @@
     <Compile Include="Migrations\201411182202431_V21Final.Designer.cs">
       <DependentUpon>201411182202431_V21Final.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201412081934318_V211.cs" />
+    <Compile Include="Migrations\201412081934318_V211.Designer.cs">
+      <DependentUpon>201412081934318_V211.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -409,6 +413,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201411182202431_V21Final.resx">
       <DependentUpon>201411182202431_V21Final.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201412081934318_V211.resx">
+      <DependentUpon>201412081934318_V211.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
