* Reworked routing: removed static file security barrier again (caused too much problems) * Added 'SmartUrlRoutingModule', which can pass static files to 'UrlRoutingModule' if desired (e.g. used by MiniProfiler and BizImporter url mapping). This way static files can be handled by regular actions or filters, without polluting web.config. * Removed all web.config files from plugin's asset folders. * Added IIS rewrite rule for /productreviews/{id} > /product/reviews/{id} * Optimized error handling & redesigned error pages * Removed 'PageNotFound' topic. Text is a simple locale resource now.

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -250,6 +250,7 @@
     <Compile Include="Plugins\PluginMediator.cs" />
     <Compile Include="Plugins\ProviderManager.cs" />
     <Compile Include="Seo\CanonicalHostNameAttribute.cs" />
+    <Compile Include="SmartUrlRoutingModule.cs" />
     <Compile Include="Themes\ThemeFileResolver.cs" />
     <Compile Include="Themes\InheritedVirtualThemeFile.cs" />
     <Compile Include="UI\Components\Menu\AdminMenuProvider.cs" />
