--- a/src/Presentation/SmartStore.Web/Web.Release.config
+++ b/src/Presentation/SmartStore.Web/Web.Release.config
@@ -18,4 +18,7 @@
     <compilation batch="true" optimizeCompilations="false" xdt:Transform="SetAttributes(batch,optimizeCompilations)" />
     <customErrors mode="RemoteOnly" xdt:Transform="SetAttributes(mode)" />
 	</system.web>
+  <system.webServer>
+    <httpErrors errorMode="DetailedLocalOnly" xdt:Transform="SetAttributes(errorMode)" />
+  </system.webServer>
 </configuration>
