--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -85,21 +85,8 @@
     <add key="sm:PluginsIgnoredDuringInstallation" value="SmartStore.DemoShopControlling, SmartStore.WebApi, SmartStore.Glimpse, SmartStore.DevTools" />
   </appSettings>
   
-  <location path="Plugins/SmartStore.BizImporter">
-    <system.web>
-      <httpRuntime maxRequestLength="1536000" executionTimeout="14400" maxQueryStringLength="16384" />
-    </system.web>
-    <system.webServer>
-      <security>
-        <requestFiltering>
-          <requestLimits maxAllowedContentLength="1572864000" maxQueryString="16384" />
-        </requestFiltering>
-      </security>
-    </system.webServer> 
-  </location>
-  
   <system.web>
-    <customErrors mode="RemoteOnly" />
+    <customErrors mode="RemoteOnly" /> 
     <sessionState mode="InProc" />
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" /> 
     <compilation debug="true" targetFramework="4.5" batch="false" numRecompilesBeforeAppRestart="250" optimizeCompilations="false">
@@ -124,39 +111,46 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
         <add namespace="System.Web.Optimization" />
-      </namespaces>
+      </namespaces> 
     </pages>
-    <httpModules />
+    <httpModules /> 
     <httpRuntime targetFramework="4.5.1" maxRequestLength="1536000" executionTimeout="5400" maxQueryStringLength="16384" />
   </system.web>
   
   <system.webServer>
-    <!-- Prevent IIS 7.0 from returning a custom 404/500 error page of its own. -->
-    <httpErrors existingResponse="PassThrough" />
+    <!-- Show custom 404/500 error page for unmanaged (static) resources. -->
+    <httpErrors errorMode="DetailedLocalOnly" defaultResponseMode="File">
+	    <remove statusCode="404" />
+	    <remove statusCode="500" />
+	    <error statusCode="404" path="404.html" responseMode="File" />
+	    <error statusCode="500" path="500.html" responseMode="File" />
+    </httpErrors>
     
-    <modules runAllManagedModulesForAllRequests="false"></modules>
+    <modules runAllManagedModulesForAllRequests="false">
+      <!-- 
+      Handles all requests, includung static ones. 
+      Allows us to handle requests for specific static resources per managed handlers.
+      -->
+      <add name="SmartUrlRoutingModule" type="SmartStore.Web.Framework.SmartUrlRoutingModule" preCondition="" />
+    </modules>
+    
     <handlers accessPolicy="Script,Read">
-      <!-- Clear all handlers, prevents executing code file extensions or returning any file contents. -->
-      <clear />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="OPTIONS" />
+      <remove name="TRACEVerbHandler" />
+      
       <!-- sitemap.xml -->
       <add name="sitemap" path="sitemap.xml" verb="*" type="System.Web.Routing.UrlRoutingModule" resourceType="Unspecified" preCondition="integratedMode" />
+      
       <!-- robots.txt -->
       <add name="robots" path="robots.txt" verb="*" type="System.Web.Routing.UrlRoutingModule" resourceType="Unspecified" preCondition="integratedMode" />
-      <!-- favicon.[ico|png] -->
-      <add name="favicon-ico" path="favicon*.ico" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" />
-      <add name="favicon-png" path="favicon*.png" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" />
-      <!-- *.html -->
-      <add name="htm-files" path="*.htm" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" />
-      <add name="html-files" path="*.html" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" />
-      <!-- Return 404 for all requests via a managed handler. The URL routing handler will substitute the MVC request handler when routes match. -->
-      <add name="NotFound" path="*" verb="*" type="System.Web.HttpNotFoundHandler" preCondition="integratedMode" requireAccess="Script" />
+
+      <!-- *.less -->
+      <add name="LessAssetHandler" path="*.less" verb="GET" type="SmartStore.Web.Framework.Themes.LessCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="integratedMode" />
+
       <!-- WebApi -->
-      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
-      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <staticContent>
       <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="24.00:00:00" />
@@ -180,8 +174,8 @@
       </requestFiltering>
     </security>
     <rewrite>
-        <rewriteMaps configSource="Config\RewriteMaps.config" />
         <rules configSource="Config\RewriteRules.config" />
+        <rewriteMaps configSource="Config\RewriteMaps.config" />
     </rewrite>
   </system.webServer>
   
