--- a/src/Presentation/SmartStore.Web/Config/RewriteRules.config
+++ b/src/Presentation/SmartStore.Web/Config/RewriteRules.config
@@ -1,3 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <rules>
+    <rule name="/productreviews/{id} > product/reviews/{id}" stopProcessing="true">
+        <match url="productreviews/(\d+)" />
+        <action type="Redirect" url="/product/reviews/{R:1}" />
+    </rule>
 </rules>
