--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -434,6 +434,8 @@
     <Compile Include="Validators\Common\ContactUsValidator.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="404.html" />
+    <Content Include="500.html" />
     <Content Include="App_Data\Localization\App\de\all.smres.xml" />
     <Content Include="App_Data\Localization\App\de\head.txt" />
     <Content Include="App_Data\Localization\App\en\all.smres.xml" />
@@ -1034,12 +1036,6 @@
     <Content Include="Content\install\variables.custom.less" />
     <Content Include="Content\install\variables.less" />
     <Content Include="Content\bootstrap\custom\colorpicker.less" />
-    <Content Include="Media\Web.config">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="Content\Web.config">
-      <SubType>Designer</SubType>
-    </Content>
     <Content Include="favicon.readme.txt" />
     <Content Include="Media\default-avatar.jpg" />
     <Content Include="Media\default-image.jpg" />
@@ -1788,9 +1784,6 @@
     <Content Include="Scripts\underscore.string.js" />
     <Content Include="Scripts\underscore.string.min.js" />
     <Content Include="Scripts\underscore.min.map" />
-    <Content Include="Scripts\Web.config">
-      <SubType>Designer</SubType>
-    </Content>
     <None Include="Scripts\_references.js" />
     <Content Include="Content\bootstrap\custom\throbber.less" />
     <Content Include="Content\bootstrap\custom\images\throbber-progress-black-16.gif" />
@@ -2134,12 +2127,6 @@
     <Content Include="Themes\Alpha\Content\user.less" />
     <Content Include="Views\Checkout\BillingAddress.cshtml">
       <SubType>Code</SubType>
-    </Content>
-    <Content Include="Themes\Mobile\Content\Web.config">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="Themes\Web.config">
-      <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\ShoppingCart\_CommentBox.cshtml" />
     <Content Include="Views\ShoppingCart\_CommentBox.Mobile.cshtml" />
