--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -159,11 +159,13 @@
       <remove fileExtension=".woff" />
       <remove fileExtension=".otf" />
       <remove fileExtension=".json" />
+      <remove fileExtension=".less" />
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
       <mimeMap fileExtension=".eot" mimeType="application/octet-stream" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
       <mimeMap fileExtension=".otf" mimeType="application/x-font-opentype" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
+      <mimeMap fileExtension=".less" mimeType="text/css" />
     </staticContent>
     <urlCompression doStaticCompression="false" doDynamicCompression="true" />
     <security>
